sumo/tests/netconvert/errors/XML/broken_edge/edge#length__false1/errors.netconvert
Error: Not numeric value for length in edge '1'.
Quitting (on error).
